public/css/styles.css
/* ... */
.single__hero__title {
  position: absolute;
  font-size: 5.6rem;
  text-align: center;
  z-index: 2;
  width: 100%;
}

.single__park__details {
  background: white;
  max-width: 900px;
  position: relative;
  padding: 3rem;
  margin: -10rem auto 0 auto;
  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.15);
}

.single__location {
  display: block;
  position: relative;
  padding: 20px;
  background-color: var(--primary-color);
  color: var(--primary-text);
  float: right;
  border-radius: 0.3rem;
  top: -50px;
  left: 30px;
}

.single__description {
  font-size: 1.8rem;
}

.static__map {
  width: calc(100% + 6rem);
  max-width: none;
  margin-top: -3rem;
  margin-left: -3rem;
}

/* ************************* Map page styling ************************************* */

.map {
  background: white;
  max-width: 900px;
  position: relative;
  padding: 3rem;
  /* box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.15); */
}

.autocomplete__input {
  width: 100%;
  padding: 1rem;
  font-size: 1em;
}

#map {
  height: 600px;
  width: 100%;
}

.popup {
  width: 400px;
  height: auto;
  padding: 10px;
}

.popup img {
  width: 100%;
}

/* ******************** Star review stuff ************************** */

.reviewer {
  position: relative;
  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);
  margin-bottom: 2rem;
  padding: 2rem;
}

.reviewer__stars {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: center;
  justify-content: center;
}
.reviewer__stars input {
  display: none;
}
.reviewer__stars label {
  color: black;
}
.reviewer__stars input:checked ~ label {
  color: #ffc40e;
}
.reviewer__stars input + label {
  font-size: 0;

  /* These are in the opposite DOM order
           re-order them to be visually in normal order
           This is fine for accessibility because our labels have for()
         */
}
.reviewer__stars input + label:before {
  content: "\2605";
  font-size: 2rem;
}
.reviewer__stars input + label[for="star5"] {
  -ms-flex-order: 5;
  order: 5;
}
.reviewer__stars input + label[for="star4"] {
  -ms-flex-order: 4;
  order: 4;
}
.reviewer__stars input + label[for="star3"] {
  -ms-flex-order: 3;
  order: 3;
}
.reviewer__stars input + label[for="star2"] {
  -ms-flex-order: 2;
  order: 2;
}
.reviewer__stars input + label[for="star1"] {
  -ms-flex-order: 1;
  order: 1;
}
.reviewer__stars input + label:hover,
.reviewer__stars input + label:hover ~ label {
  color: #ffdd74;
}
.reviewer textarea {
  border: 0;
  outline: 0;
  font-size: 2rem;
  padding: 2rem;
  height: 200px;
}
.reviewer__meta {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: center;
  justify-content: center;
  -ms-flex-align: center;
  align-items: center;
  border-top: 1px solid #e6e6e6;
}
.reviewer__meta > * {
  -ms-flex: 1;
  flex: 1;
}

.review {
  background-color: var(--primary-color);
  width: 100%;
  align-items: center;
  margin: 10px auto;
  border-left: 6px solid var(--primary-text);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.review__header > * {
  border-right: 1px solid #e6e6e6;
  align-items: center;
  display: flex;
  width: 100%;
}

.review__header {
  width: 100%;
  border-bottom: 1px solid #e6e6e6;
  display: flex;
}

.review__author {
  justify-content: flex-start;
  color: var(--primary-text);
  padding-left: 2rem;
}

.review__author img.avatar {
  margin-right: 2rem;
  border-radius: 50%;
  min-width: 50px;
}

.review__stars {
  color: var(--primary-text);
  justify-content: center;
}
.review__body {
  color: var(--primary-text);
  padding: 2rem;
}

.review__time {
  justify-content: center;
  color: var(--primary-text);
}

/* ******************* Top Stores Page ************************ */

.table {
  display: table;
  border-collapse: seperate;
  background-color: white;
  width: 100%;
}

thead {
  display: table-header-group;
  vertical-align: middle;
  background-color: var(--green);
  color: var(--main-bg-color);
}

tbody tr {
  border-spacing: 2px;
  border-color: red;
  text-align: center;
}

tbody tr:nth-child(even) {
  background: var(--green);
}

thead td {
  padding: 1.2rem;
  font-size: 1.8rem;
}

/* ********************* Pagiation styling ****************************** */

.pagination {
  display: flex;
  background: var(--primary-color);
  color: var(--primary-text);
  margin-top: 2rem;
  justify-content: space-between;
  border-radius: 0.3rem;
}

.pagination__prev, .pagination__next {
  align-items: center;
  color: var(--primary-text);
  margin: 0 10px;
}

